--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -22,7 +22,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 {{ end }}   
   {{ partial "header.html" $context }}
-  <section class="main-section padding">
+  <section class="main-section">
       <div class="common-layout">
           <div class='breadcrumb'>
               {{ $section := $context.FirstSection }}
