--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -146,6 +146,14 @@
         });
     }
 
+    var bindRemovePadding = function() {
+        var close = $('#close-join')
+        if (close.length > 0) {
+            $('.main-section').addClass('padding')
+        }
+    }
+
+    bindRemovePadding()
     // bindLayLoad()
     bindSubmit()
     bindHideMessage()
