fix header in doc page
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -146,14 +146,14 @@
         });
     }
 
-    var bindRemovePadding = function() {
+    var bindAddPadding = function() {
         var close = $('#close-join')
         if (close.length > 0) {
             $('.main-section').addClass('padding')
         }
     }
 
-    bindRemovePadding()
+    bindAddPadding()
     // bindLayLoad()
     bindSubmit()
     bindHideMessage()
