--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -12,7 +12,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 {{ end }}  
 {{- partial "header.html" . -}}
-<main class='main-section'>
+<main class='main-section padding'>
     <section class='section-1 bg-cover'>
         <div class="common-layout">
             {{ partial "breadcrumb.html" . }}
@@ -310,5 +310,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </footer>
 </body>
-
 </html>
