--- a/layouts/all-docs/list.html
+++ b/layouts/all-docs/list.html
@@ -589,7 +589,7 @@
 
 <body>
 
-  <h1>Content</h1>
+  <h1>{{ i18n "Content" }}</h1>
 
   {{ define "table" }}
   <li><a href="#{{ .File.UniqueID }}">{{ .LinkTitle }}</a></li>
