fix multiple H1 in doc
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/assets/scss/doc.scss
+++ b/assets/scss/doc.scss
@@ -42,7 +42,7 @@ main {
     .title-div {
         height: 20px;
         margin-top: 20px; 
-        h1 {
+        p {
             display: inline-block;
             vertical-align: middle;
             font-size: 20px;
