update element class for gtag
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -274,7 +274,7 @@
         background-repeat: no-repeat;
       }
 
-      .link-1 {
+      .link-slack {
         background-image: url('/images/header/slack.svg');
 
         &:hover {
@@ -282,7 +282,7 @@
         }
       }
 
-      .link-2 {
+      .link-twitter {
         background-image: url('/images/header/twitter.svg');
 
         &:hover {
@@ -290,7 +290,7 @@
         }
       }
 
-      .link-3 {
+      .link-github {
         background-image: url('/images/header/github.svg');
 
         &:hover {
