--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -88,9 +88,9 @@
                         </ol>
                     </li>
                     <li class='link-li'>
-                        <a class='link-1' href="{{ .Site.Params.slackLink }}" target="_blank" rel="noopener noreferrer"></a>
-                        <a class='link-2' href="{{ .Site.Params.twitterLink }}" target="_blank" rel="noopener noreferrer"></a>
-                        <a class='link-3' href="{{ .Site.Params.githubLink }}" target="_blank" rel="noopener noreferrer"></a>
+                        <a class='link-slack' href="{{ .Site.Params.slackLink }}" target="_blank" rel="noopener noreferrer"></a>
+                        <a class='link-twitter' href="{{ .Site.Params.twitterLink }}" target="_blank" rel="noopener noreferrer"></a>
+                        <a class='link-github' href="{{ .Site.Params.githubLink }}" target="_blank" rel="noopener noreferrer"></a>
                     </li>
                     <li class="menu-icon">
                         <img src="/images/header/menu.svg" alt="">
