SEO with H tags
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/assets/scss/docs.scss
+++ b/assets/scss/docs.scss
@@ -170,7 +170,7 @@
               background-repeat: no-repeat;
               background-position: bottom;
 
-              & > h2 {
+              & > p {
                   padding: 30px 40px;
                   font-weight: 600;
                   line-height: 1.2;
