--- a/assets/scss/doc.scss
+++ b/assets/scss/doc.scss
@@ -104,7 +104,7 @@ main {
             & > li {
                 width: 243px;
                 float: left;
-                & > h2 {
+                & > p {
                     padding-bottom: 12px;
                     font-size: 16px;
                     line-height: 1.5;
