--- a/layouts/docs/second.html
+++ b/layouts/docs/second.html
@@ -26,7 +26,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         {{ $secondSection = . }}
                     {{ end }}
                 {{ end }}
-                <h1><a href="{{ $secondSection.RelPermalink }}">{{ $secondSection.LinkTitle }}</a></h1>
+                <p><a href="{{ $secondSection.RelPermalink }}">{{ $secondSection.LinkTitle }}</a></p>
                 <div class="menu section-control">
                     <div></div>
                     <div></div>
