--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1082,6 +1082,106 @@
   }
 }
 
+.join-us {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  right: 20px;
+  bottom: 16px;
+  width: 336px;
+  height: 383px;
+  text-align: center;
+  background-color: #ffffff;
+  background-image: url('/images/home/modal-bg.svg');
+  background-size: cover;
+  box-shadow: 0px 8px 16px rgba(36, 46, 66, 0.05), 0px 4px 8px rgba(36, 46, 66, 0.06);
+  border-radius: 4px;
+
+  @media (min-width: 1360px) {
+    right: 50%;
+    transform: translateX(580px);
+  }
+
+  .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+  
+  .close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    cursor: pointer;
+  }
+
+  .modalImage {
+    margin-top: 40px;
+  }
+
+  h2 {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 22px;
+    color: #242E42;
+  }
+
+  .title {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  & > p {
+    margin: 8px 14px 0;
+    text-align: left;
+    font-size: 14px;
+    line-height: 24px;
+    color: #404F68;
+  }
+
+  & > div {
+    margin-top: 4px;
+    display: flex;
+    justify-content: center;
+    font-size: 0;
+
+    p {
+      font-size: 12px;
+    }
+  }
+
+  .slack {
+    p {
+      width: 90px;
+      height: 28px;
+      text-align: center;
+      background: #059669;
+      border: 1px solid #479E88;
+      box-sizing: border-box;
+      border-radius: 2px;
+
+      a {
+        line-height: 28px;
+        color: #FFFFFF;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+  .wechat {
+    margin-left: 48px;
+    img {
+      margin-top: 12px;
+    }
+    p {
+      margin-top: 16px;
+    }
+  }
+}
+
 footer {
   background: #ffffff;
 
