update wechat image
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -43,8 +43,7 @@
                     <a class='wechat' href="javascript:void(0);">
                         {{ "/static/images/footer/wechat.svg" | readFile | safeHTML }}
                         <div class="hide-div">
-                            <p>Follow the official account</p>
-                            <img src="/images/footer/wechat_code.svg" alt="">
+                            <img src="/images/home/wechat.svg" alt="">
                         </div>
                     </a>
                     <a class='facebook-a' href="https://www.facebook.com/kubesphere" target="_blank"></a>
