--- a/assets/scss/markdown.scss
+++ b/assets/scss/markdown.scss
@@ -425,7 +425,7 @@
 .md-body pre code {
   display: inline-block;
   white-space: pre;
-  font-family: Monaco;
+  font-family: Monaco,Menlo,Consolas,Courier New,monospace;
   font-size: 14px;
   line-height: 1.71;
   color: #ffffff;
