add canonical tag
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,6 +14,8 @@
 
 <meta name="docsearch:language" content="{{ .Site.LanguageCode }}" />
 
+<link rel="canonical" href="https://kubesphere.io/{{ .RelPermalink }}" />
+
 {{- partial "css.html" . -}}
 
 <script src='{{ "js/jquery-3.5.0.min.js" | relURL }}'></script>
