update header for operations requirement
Signed-off-by: FeynmanZhou <pengfeizhou@yunify.com>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,7 @@
     {{ if eq .Site.Language.Lang "en"}}
     <div class="join-div">
         <div class="content">
-            🚀 KubeSphere on AWS is now available！You can easily provision an Amazon EKS cluster managed by KubeSphere. <a href="https://aws.amazon.com/quickstart/architecture/qingcloud-kubesphere/" target="_blank" rel="noopener noreferrer">Try it on AWS →</a>
+            📝 Best Practice from the Smart Home Industry: Migration from Docker Swarm to Kubernetes. <a href="/case/aqara/" target="_blank" rel="noopener noreferrer">Explore this journey →</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
