fix canonical tag url error
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,7 +14,7 @@
 
 <meta name="docsearch:language" content="{{ .Site.LanguageCode }}" />
 
-<link rel="canonical" href="https://kubesphere.io/{{ .RelPermalink }}" />
+<link rel="canonical" href="https://kubesphere.io{{ .RelPermalink }}" />
 
 {{- partial "css.html" . -}}
 
