--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -279,16 +279,16 @@
   bottom: 20px;
   left: 0;
   right: 0;
-  padding: 20px 10px;
-  background-image: linear-gradient( 99deg ,#4a499a 29%,#8552c3 80%);
 
   & > div {
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: #ffffff;
     line-height: 20px;
-
+    background-color: #242e42;
+    border-radius: 4px;
     @media only screen and (max-width: $mobile-max-width) {
       flex-direction: column;
     }
@@ -308,13 +308,12 @@
     border: none;
     margin-left: 20px;
     border-radius: 20px;
-    box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2);
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1) 97%), linear-gradient(to bottom, #242e42, #242e42);
     font-size: 14px;
     color: #ffffff;
+    background-color: #479e88;
     cursor: pointer;
     &:hover {
-      box-shadow: none;
+      background-color: #3b747a;
     }
     @media only screen and (max-width: $mobile-max-width) {
       margin-top: 20px;
