--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,7 @@
     {{ if eq .Site.Language.Lang "zh"}}
     <div class="join-div">
         <div class="content">
-            🚀KubeSphere on Cloud 全新上线！<a href="https://www.qingcloud.com/products/kubesphereqke/" target="_blank" rel="noopener noreferrer">选择 QKE</a> 或 <a href="https://aws.amazon.com/quickstart/architecture/qingcloud-kubesphere/" target="_blank" rel="noopener noreferrer">KubeSphere on AWS</a> 一键部署集群👩‍💻
-            <a href="https://www.qingcloud.com/kubesphere2020#tz2" target="_blank" rel="noopener noreferrer">免费回看 v3.0 发布会视频 📺 →</a>
+            🚀KubeSphere 3.1.0 全新发布！混合多云走向边缘，让应用无处不在，<a href="https://mp.weixin.qq.com/s/3yDXHCw4CROwnVRlUl80OQ" target="_blank" rel="noopener noreferrer">查看 v3.1.1 详细解读与视频👩‍💻</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
@@ -12,7 +11,7 @@
     {{ if eq .Site.Language.Lang "en"}}
     <div class="join-div">
         <div class="content">
-            🚀 KubeSphere on AWS is now available！You can easily provision an Amazon EKS cluster managed by KubeSphere. <a href="https://aws.amazon.com/quickstart/architecture/qingcloud-kubesphere/" target="_blank" rel="noopener noreferrer">Try it on AWS →</a>
+            🚀 KubeSphere 3.1.0 is now general available！It extends the Kubernetes from the multi-cloud to the edge. <a href="/docs/release/release-v310/" target="_blank" rel="noopener noreferrer">Read the Release Notes for 3.1.0 →</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
