--- a/assets/scss/docs.scss
+++ b/assets/scss/docs.scss
@@ -11,7 +11,7 @@
       width: 1060px;
     }
 
-    p {
+    & > p {
       width: 1060px;
       margin-top: 25px;
       letter-spacing: -0.04px;
