update header for the lastest meetup
Signed-off-by: FeynmanZhou <pengfeizhou@yunify.com>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
     {{ if eq .Site.Language.Lang "zh"}}
     <div class="join-div">
         <div class="content">
-            🚀KubeSphere 3.1.0 全新发布！混合多云走向边缘，让应用无处不在，<a href="/zh/blogs/kubesphere-3.1.0-ga-announcement/" target="_blank" rel="noopener noreferrer">查看 v3.1.0 详细解读与视频👩‍💻</a> <a href="https://www.bagevent.com/event/7349342?bag_track=shequ&code=001fmpFa12811B0yKPHa16PaTz4fmpFe&state=STATE" target="_blank" rel="noopener noreferrer">5.15 相约上海！2021 年度首届云原生 Meetup 火热报名中🙋‍♂️→</a>
+            🚀KubeSphere 3.1.0 全新发布！混合多云走向边缘，让应用无处不在，<a href="/zh/blogs/kubesphere-3.1.0-ga-announcement/" target="_blank" rel="noopener noreferrer">查看 v3.1.0 详细解读与视频👩‍💻</a> <a href="https://www.bagevent.com/event/7414078" target="_blank" rel="noopener noreferrer">5 月 29 日相约杭州！云原生线下 Meetup 火热报名中🙋‍♂️→</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
