--- a/assets/scss/live.scss
+++ b/assets/scss/live.scss
@@ -37,6 +37,7 @@
     }
 
     .live-2-left {
+      position: relative;
       width: 840px;
       height: 400px;
       @media only screen and (max-width: $mobile-max-width) {
@@ -48,6 +49,22 @@
         height: 100%;
         min-height: 200px;
         object-fit: cover;
+      }
+      button {
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
+        padding: 10px 20px;
+        border-radius: 28px;
+        font-size: 16px;
+        color: #ffffff;
+        border: none;
+        cursor: pointer;
+        box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2), 0 10px 50px 0 rgba(34, 43, 62, 0.1);
+        background-image: linear-gradient(to bottom, rgba(85, 188, 138, 0), rgba(85, 188, 138, 0.1) 97%), linear-gradient(to bottom, #55bc8a, #55bc8a);
+        &:hover {
+          box-shadow: none;
+        }
       }
     }
 
