add download btn
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,12 +7,7 @@
       <p class='p1'>{{ .title | safeHTML }}</p>
       <h1>{{ .topic | safeHTML }}</h1>
       <p class='p2'>{{ .content | safeHTML }}</p>
-      <a href="{{ .downloadLink1 }}" target="_blank" rel="noopener noreferrer">
-        <button class='btn1 common-btn'>{{ .btnContent1 }}</button>
-      </a>
-      <a href="{{ .downloadLink2 }}" target="_blank" rel="noopener noreferrer">
-        <button class='btn2 common-btn'>{{ .btnContent2 }}</button>
-      </a>
+      {{ partial "downloadButton" . }}
     </div>
     <img class='img1' src="/images/home/53.png" alt="{{ i18n "kubesphere console screenshot"}}">
     <img class='img2' src="/images/home/left.svg" alt="{{ i18n "background image"}}">
