--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -402,3 +402,27 @@ section {
   /* Avoid pushing up the copy buttons. */
   margin: 0;
 }
+
+.download-btn {
+  height: 56px;
+  border-radius: 28px;
+  font-size: 16px;
+}
+
+.download-btn1 {
+  width: 211px;
+  box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2), 0 10px 50px 0 rgba(76, 169, 134, 0.05);
+  background-image: linear-gradient(to bottom,rgba(0,0,0,0),rgba(0,0,0,0.1) 97%),linear-gradient(to bottom,#242e42,#242e42);
+}
+
+.download-btn2 {
+  width: 195px;
+  margin-left: 12px;
+  color: #36435c;
+  box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2), 0 10px 50px 0 rgba(76, 169, 134, 0.05);
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.1) 97%), linear-gradient(to bottom, #ffffff, #ffffff);
+  @media only screen and (max-width: $mobile-max-width) {
+    margin-left: 0px;
+    margin-top: 12px;
+  }
+}
