--- a/assets/scss/scenario.scss
+++ b/assets/scss/scenario.scss
@@ -10,7 +10,8 @@ html {
   padding-top: 129px;
 
   .title-div {
-    padding-bottom: 60px;
+    position: relative;
+    padding-bottom: 68px;
     h1 {
       width: 1060px;
     }
@@ -23,16 +24,31 @@ html {
       text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
     }
 
+    .left-p {
+      max-width: 730px;
+    }
+
+    .download-div {
+      position: absolute;
+      right: 0;
+      bottom: 64px;
+    }
+
     @media only screen and (max-width: $mobile-max-width) {
       width: 100%;
-      top: 100px;
-
       h1 {
         width: 100%;
       }
 
       p {
         width: 100%;
+      }
+
+      .download-div {
+        position: relative;
+        margin-top: 20px;
+        text-align: center;
+        bottom: 0;
       }
     }
   }
@@ -169,7 +185,7 @@ html {
 
     iframe {
       margin-top: 40px;
-
+      margin-bottom: 56px;
       @media only screen and (max-width: $mobile-max-width) {
         width: 100%;
         height: 300px;
@@ -177,12 +193,11 @@ html {
     }
   
     p {
-      margin-top: 56px;
       letter-spacing: -0.04px;
       color: #31383e;
     }
   
-    button {
+    .lab {
       width: 263px;
       height: 56px;
       margin-top: 20px;
