--- a/layouts/_default/scenario.html
+++ b/layouts/_default/scenario.html
@@ -3,7 +3,14 @@
 <section class='section-1 bg-cover' style='background-image: url("{{ .image }}");'>
   <div class="title-div common-layout">
     <h1 class="title-h1">{{ .title }}</h1>
+    {{ if .showDownload }}
+    <p class="common-p left-p">{{ .content }}</p>
+    <div class="download-div">
+      {{ partial "downloadButton" . }}
+    </div>
+    {{ else }}
     <p class="common-p">{{ .content }}</p>
+    {{ end }}
   </div>
 </section>
 {{ end }}
@@ -62,8 +69,14 @@
     {{ else }}
     <img src="{{ .image }}" alt="">
     {{ end }}
+    {{ if .showDownload }}
+    <div>
+      {{ partial "downloadButton" . }}
+    </div>
+    {{ else }}
     <p class="common-p">{{ .content }}</p>
-    <a href="{{ .link }}"><button class="common-btn">{{ .btnContent }}</button></a>
+    <a href="{{ .link | relLangURL }}"><button class="common-btn lab">{{ .btnContent }}</button></a>
+    {{ end }}
   </div>
   {{ end }}
 </section>
