--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,7 @@
     {{ if eq .Site.Language.Lang "en"}}
     <div class="join-div">
         <div class="content">
-            🚀 KubeSphere 3.1.0 is now general available！It extends the Kubernetes from the multi-cloud to the edge. <a href={{"/docs/release/release-v310/" | relLangURL }} target="_blank" rel="noopener noreferrer">Read the Release Notes for 3.1.0 →</a>
+            🚀 KubeSphere 3.1.0 is now generally available as it extends Kubernetes from the cloud to the edge. <a href={{"/docs/release/release-v310/" | relLangURL }} target="_blank" rel="noopener noreferrer">Read the Release Notes for 3.1.0 →</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
