--- a/layouts/live/list.html
+++ b/layouts/live/list.html
@@ -14,7 +14,7 @@
       <div class="live-2-left">
           <a href="{{ .url }}">
             <img src="{{ .image }}" alt="">
-            <button>{{ i18n "Wonderful review" }}</button>
+            <button>{{ i18n "Watch live" }}</button>
           </a>
       </div>
       <div class="live-2-right">
