update the page of live
Signed-off-by: faweizhao26 <faweizhao@kubesphere.io>

--- a/layouts/live/list.html
+++ b/layouts/live/list.html
@@ -14,7 +14,8 @@
       <div class="live-2-left">
           <a href="{{ .url }}">
             <img src="{{ .image }}" alt="">
-            <button>{{ i18n "Watch live" }}</button>
+            <button>{{ i18n "Wonderful review" }}</button>
+            
           </a>
       </div>
       <div class="live-2-right">
