--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
     {{ if eq .Site.Language.Lang "zh"}}
     <div class="join-div">
         <div class="content">
-            🚀KubeSphere 3.1.0 全新发布！混合多云走向边缘，让应用无处不在，<a href='{{ "/blogs/kubesphere-3.1.0-ga-announcement/" | relLangURL }}' target="_blank" rel="noopener noreferrer">查看 v3.1.0 详细解读与视频👩‍💻</a> <a href="https://www.bagevent.com/event/7469384?bag_track=shequ" target="_blank" rel="noopener noreferrer">6 月 19 日相约成都！云原生线下 Meetup 火热报名中🙋‍♂️→</a>
+            🚀KubeSphere 3.1.0 全新发布！混合多云走向边缘，让应用无处不在，<a href='{{ "/blogs/kubesphere-3.1.0-ga-announcement/" | relLangURL }}' target="_blank" rel="noopener noreferrer">查看 v3.1.0 详细解读与视频👩‍💻</a> <a href="https://cic.qingcloud.com/index?channel=4692b1f2-c930-11eb-9f93-acde48001122" target="_blank" rel="noopener noreferrer">7 月 29 日相约北京！云原生线下 Meetup 火热报名中🙋‍♂️→</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
