update footer and header, add Azure as a new provider
Signed-off-by: FeynmanZhou <pengfeizhou@yunify.com>

--- a/layouts/docs/second.html
+++ b/layouts/docs/second.html
@@ -111,7 +111,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </li>
                                 <li>
                                     <img src="/images/docs/email.svg" alt="email" >
-                                    <a href="mailto:kubesphere@gmail.com" target="_blank" rel="noopener noreferrer">email</a>
+                                    <a href="mailto:info@kubesphere.io" target="_blank" rel="noopener noreferrer">email</a>
                                 </li>
                             </ul>
                         </div>
@@ -325,7 +325,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a class='github-a' href="{{ .Site.Params.githubLink }}" target="_blank" rel="noopener noreferrer"></a>
             <a class='medium-a' href="{{ .Site.Params.mediumLink }}" target="_blank" rel="noopener noreferrer"></a>
         </div>
-        <p class='p1'>{{ i18n "KubeSphere®️ 2020 All Rights Reserved." }}</p>
+        <p class='p1'>{{ i18n "KubeSphere®️ 2021 All Rights Reserved." }}</p>
     </div>
 </footer>
 </body>
