--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -86,10 +86,18 @@
                             <li>{{ i18n "demo content 3" }}</li>
                         </ol>
                     </li>
-                    <li class='link-li'>
+                    <!-- <li class='link-li'>
                         <a class='link-slack' href="{{ .Site.Params.slackLink }}" target="_blank" rel="noopener noreferrer"></a>
                         <a class='link-twitter' href="{{ .Site.Params.twitterLink }}" target="_blank" rel="noopener noreferrer"></a>
                         <a class='link-github' href="{{ .Site.Params.githubLink }}" target="_blank" rel="noopener noreferrer"></a>
+                    </li> -->
+                    <li class="github-li">
+                        <div class="github-star">
+                            <a class="star-btn" href="{{ .Site.Params.githubLink }}" rel="noopener noreferrer" target="_blank">
+                                <span class="star-img"></span>&nbsp;<span>Star</span>
+                            </a>
+                            <a class="social-count" href="{{ .Site.Params.githubStarLink }}" rel="noopener noreferrer" target="_blank"></a>
+                        </div>
                     </li>
                     <li class="menu-icon">
                         <img src="/images/header/menu.svg" alt="">
@@ -148,6 +156,17 @@
     </div>
 </header>
 <script>
+var githubApiLink = "{{ .Site.Params.githubApiLink }}"
+
+var getStar = function() {
+    $('.social-count').hide()
+    $.getJSON(githubApiLink, function(data) {
+        $('.social-count').show().html(data.stargazers_count)
+    })
+}
+
+getStar()
+
 var bindNavMouseEvent = function(selector, element) {
     if (!element) {
         element = $(selector)
